# game_v4

./: CMakeLists.txt  README.md  notes.txt  vcpkg-configuration.json  vcpkg.json
client/: CMakeLists.txt
client/include/: client_config.h  client_core.h  client_global.h  client_network.h  client_player.h  client_ui.h  ui.h
client/src/: client_config.cpp  client_core.cpp  client_main.cpp  client_network.cpp  client_player.cpp  client_ui.cpp  ui.cpp
server/: CMakeLists.txt
server/include/: server_commands.h  server_config.h  server_console.h  server_core.h  server_global.h  server_logger.h  server_network.h  server_player.h  server_utils.h
server/src/: server_commands.cpp  server_config.cpp  server_console.cpp  server_core.cpp  server_logger.cpp  server_main.cpp  server_network.cpp  server_utils.cpp
shared/: CMakeLists.txt
shared/include/: shared_crypto.h  shared_global.h  shared_network.h  shared_utils.h
shared/src/: shared_crypto.cpp  shared_global.cpp  shared_network.cpp  shared_utils.cpp
